--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/brettmadrid/node-express-tutorial1#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.20.11",
     "nodemon": "^2.0.2",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "sqlite3": "^4.1.1"
   }
 }
